--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,7 @@
         <param-value>password</param-value>
     </context-param>
     <filter>
-        <filter-name>MyFiltㄹer</filter-name>
+        <filter-name>MyFilter</filter-name>
         <filter-class>com.demo.filters.MyFilter</filter-class>
         <init-param>
             <param-name>FilterInitParam</param-name>
